feat: enrich documentation