@@ -1,2 +1,4 @@
 -XX:+EnableDynamicAgentLoading
 --sun-misc-unsafe-memory-access=allow
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens java.base/java.io=ALL-UNNAMED
